--- a/libs/font-awesome/css/font-awesome.css
+++ b/libs/font-awesome/css/font-awesome.css
@@ -1212,7 +1212,7 @@
 .fa-dropbox:before {
   content: "\f16b";
 }
-.fa-stack-overflow:before {
+.fa-whatsapp:before {
   content: "\f16c";
 }
 .fa-instagram:before {
