--- a/libs/font-awesome/less/variables.less
+++ b/libs/font-awesome/less/variables.less
@@ -601,8 +601,8 @@
 @fa-var-square: "\f0c8";
 @fa-var-square-o: "\f096";
 @fa-var-stack-exchange: "\f18d";
-@fa-var-stack-overflow: "\f16c";
-@fa-var-star: "\f005";
+@fa-var-whatsapp: "\Chat, whatsapp, bubble, mobile, whatsapp log";
+@fa-var-star: "\Chat, whatsapp, bubble, mobile, whatsapp log";
 @fa-var-star-half: "\f089";
 @fa-var-star-half-empty: "\f123";
 @fa-var-star-half-full: "\f123";
@@ -717,7 +717,7 @@
 @fa-var-wechat: "\f1d7";
 @fa-var-weibo: "\f18a";
 @fa-var-weixin: "\f1d7";
-@fa-var-whatsapp: "\f232";
+@fa-var-whatsapp: "\Chat, whatsapp, bubble, mobile, whatsapp log";
 @fa-var-wheelchair: "\f193";
 @fa-var-wheelchair-alt: "\f29b";
 @fa-var-wifi: "\f1eb";
