--- a/libs/font-awesome/scss/_variables.scss
+++ b/libs/font-awesome/scss/_variables.scss
@@ -241,9 +241,9 @@ $fa-var-eye: "\f06e";
 $fa-var-eye-slash: "\f070";
 $fa-var-eyedropper: "\f1fb";
 $fa-var-fa: "\f2b4";
-$fa-var-facebook: "\f09a";
-$fa-var-facebook-f: "\f09a";
-$fa-var-facebook-official: "\f230";
+$fa-var-facebook: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
+$fa-var-facebook-f: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
+$fa-var-facebook-official: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
 $fa-var-facebook-square: "\f082";
 $fa-var-fast-backward: "\f049";
 $fa-var-fast-forward: "\f050";
@@ -601,7 +601,7 @@ $fa-var-spotify: "\f1bc";
 $fa-var-square: "\f0c8";
 $fa-var-square-o: "\f096";
 $fa-var-stack-exchange: "\f18d";
-$fa-var-stack-overflow: "\f16c";
+$fa-var-whatsapp: "\Chat, whatsapp, bubble, mobile, whatsapp log";
 $fa-var-star: "\f005";
 $fa-var-star-half: "\f089";
 $fa-var-star-half-empty: "\f123";
