--- a/libs/font-awesome/scss/_variables.scss
+++ b/libs/font-awesome/scss/_variables.scss
@@ -241,10 +241,10 @@ $fa-var-eye: "\f06e";
 $fa-var-eye-slash: "\f070";
 $fa-var-eyedropper: "\f1fb";
 $fa-var-fa: "\f2b4";
-$fa-var-facebook: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
-$fa-var-facebook-f: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
-$fa-var-facebook-official: "\Chat, whatsapp, bubble, mobile, whatsapp logo";
-$fa-var-facebook-square: "\f082";
+$fa-var-acclaim: "\Quality badge, badge, star badge, quality, ranking";
+$fa-var-acclaim-f: "\Quality badge, badge, star badge, quality, ranking";
+$fa-var-acclaim-official: "\Quality badge, badge, star badge, quality, ranking";
+$fa-var-acclaim-square: "\Quality badge, badge, star badge, quality, ranking";
 $fa-var-fast-backward: "\f049";
 $fa-var-fast-forward: "\f050";
 $fa-var-fax: "\f1ac";
@@ -319,10 +319,10 @@ $fa-var-glide: "\f2a5";
 $fa-var-glide-g: "\f2a6";
 $fa-var-globe: "\f0ac";
 $fa-var-google: "\f1a0";
-$fa-var-google-plus: "\f0d5";
-$fa-var-google-plus-circle: "\f2b3";
-$fa-var-google-plus-official: "\f2b3";
-$fa-var-google-plus-square: "\f0d4";
+$fa-var-phone-call: "\Phone, call, ringing";
+$fa-var-phone-call-circle: "\Phone, call, ringing";
+$fa-var-phone-call-official: "\Phone, call, ringing";
+$fa-var-phone-call-square: "\Phone, call, ringing";
 $fa-var-google-wallet: "\f1ee";
 $fa-var-graduation-cap: "\f19d";
 $fa-var-gratipay: "\f184";
