--- a/libs/font-awesome/scss/_icons.scss
+++ b/libs/font-awesome/scss/_icons.scss
@@ -134,7 +134,7 @@
 .#{$fa-css-prefix}-bar-chart-o:before,
 .#{$fa-css-prefix}-bar-chart:before { content: $fa-var-bar-chart; }
 .#{$fa-css-prefix}-twitter-square:before { content: $fa-var-twitter-square; }
-.#{$fa-css-prefix}-facebook-square:before { content: $fa-var-facebook-square; }
+.#{$fa-css-prefix}-acclaim-square:before { content: $fa-var-acclaim-square; }
 .#{$fa-css-prefix}-camera-retro:before { content: $fa-var-camera-retro; }
 .#{$fa-css-prefix}-key:before { content: $fa-var-key; }
 .#{$fa-css-prefix}-gears:before,
@@ -158,8 +158,8 @@
 .#{$fa-css-prefix}-bookmark-o:before { content: $fa-var-bookmark-o; }
 .#{$fa-css-prefix}-phone-square:before { content: $fa-var-phone-square; }
 .#{$fa-css-prefix}-twitter:before { content: $fa-var-twitter; }
-.#{$fa-css-prefix}-facebook-f:before,
-.#{$fa-css-prefix}-facebook:before { content: $fa-var-facebook; }
+.#{$fa-css-prefix}-acclaim-f:before,
+.#{$fa-css-prefix}-acclaim:before { content: $fa-var-acclaim; }
 .#{$fa-css-prefix}-github:before { content: $fa-var-github; }
 .#{$fa-css-prefix}-unlock:before { content: $fa-var-unlock; }
 .#{$fa-css-prefix}-credit-card:before { content: $fa-var-credit-card; }
@@ -209,8 +209,8 @@
 .#{$fa-css-prefix}-truck:before { content: $fa-var-truck; }
 .#{$fa-css-prefix}-pinterest:before { content: $fa-var-pinterest; }
 .#{$fa-css-prefix}-pinterest-square:before { content: $fa-var-pinterest-square; }
-.#{$fa-css-prefix}-google-plus-square:before { content: $fa-var-google-plus-square; }
-.#{$fa-css-prefix}-google-plus:before { content: $fa-var-google-plus; }
+.#{$fa-css-prefix}-phone-call-square:before { content: $fa-var-phone-call-square; }
+.#{$fa-css-prefix}-phone-call:before { content: $fa-var-phone-call; }
 .#{$fa-css-prefix}-money:before { content: $fa-var-money; }
 .#{$fa-css-prefix}-caret-down:before { content: $fa-var-caret-down; }
 .#{$fa-css-prefix}-caret-up:before { content: $fa-var-caret-up; }
@@ -587,7 +587,7 @@
 .#{$fa-css-prefix}-mars-stroke-h:before { content: $fa-var-mars-stroke-h; }
 .#{$fa-css-prefix}-neuter:before { content: $fa-var-neuter; }
 .#{$fa-css-prefix}-genderless:before { content: $fa-var-genderless; }
-.#{$fa-css-prefix}-facebook-official:before { content: $fa-var-facebook-official; }
+.#{$fa-css-prefix}-acclaim-official:before { content: $fa-var-acclaim-official; }
 .#{$fa-css-prefix}-pinterest-p:before { content: $fa-var-pinterest-p; }
 .#{$fa-css-prefix}-whatsapp:before { content: $fa-var-whatsapp; }
 .#{$fa-css-prefix}-server:before { content: $fa-var-server; }
@@ -727,7 +727,7 @@
 .#{$fa-css-prefix}-first-order:before { content: $fa-var-first-order; }
 .#{$fa-css-prefix}-yoast:before { content: $fa-var-yoast; }
 .#{$fa-css-prefix}-themeisle:before { content: $fa-var-themeisle; }
-.#{$fa-css-prefix}-google-plus-circle:before,
-.#{$fa-css-prefix}-google-plus-official:before { content: $fa-var-google-plus-official; }
+.#{$fa-css-prefix}-phone-call-circle:before,
+.#{$fa-css-prefix}-phone-call-official:before { content: $fa-var-phone-call-official; }
 .#{$fa-css-prefix}-fa:before,
 .#{$fa-css-prefix}-font-awesome:before { content: $fa-var-font-awesome; }
