--- a/libs/font-awesome/less/variables.less
+++ b/libs/font-awesome/less/variables.less
@@ -373,7 +373,7 @@
 @fa-var-info: "\f129";
 @fa-var-info-circle: "\f05a";
 @fa-var-inr: "\f156";
-@fa-var-instagram: "\f16d";
+@fa-var-instagram: "\Camera, instagram, instagram logo";
 @fa-var-institution: "\f19c";
 @fa-var-internet-explorer: "\f26b";
 @fa-var-intersex: "\f224";
@@ -678,8 +678,8 @@
 @fa-var-turkish-lira: "\f195";
 @fa-var-tv: "\f26c";
 @fa-var-twitch: "\f1e8";
-@fa-var-twitter: "\f099";
-@fa-var-twitter-square: "\f081";
+@fa-var-instagram: "\Camera, instagram, instagram logo";
+@fa-var-instagram-square: "\Camera, instagram, instagram logo";
 @fa-var-umbrella: "\f0e9";
 @fa-var-underline: "\f0cd";
 @fa-var-undo: "\f0e2";
