--- a/libs/font-awesome/css/font-awesome.css
+++ b/libs/font-awesome/css/font-awesome.css
@@ -554,7 +554,7 @@
 .fa-bar-chart:before {
   content: "\f080";
 }
-.fa-twitter-square:before {
+.fa-instagram-square:before {
   content: "\f081";
 }
 .fa-acclaim-square:before {
@@ -624,7 +624,7 @@
 .fa-phone-square:before {
   content: "\f098";
 }
-.fa-twitter:before {
+.fa-instagram:before {
   content: "\f099";
 }
 .fa-acclaim-f:before,
