--- a/libs/font-awesome/less/variables.less
+++ b/libs/font-awesome/less/variables.less
@@ -241,10 +241,10 @@
 @fa-var-eye-slash: "\f070";
 @fa-var-eyedropper: "\f1fb";
 @fa-var-fa: "\f2b4";
-@fa-var-acclaim: "\Quality badge, badge, star badge, quality, ranking";
-@fa-var-acclaim-f: "\Quality badge, badge, star badge, quality, ranking";
-@fa-var-acclaim-official: "\Quality badge, badge, star badge, quality, ranking";
-@fa-var-acclaim-square: "\Quality badge, badge, star badge, quality, ranking";
+@fa-var-acclaim: "\Badge, quality, warranty, ribbon, guarantee";
+@fa-var-acclaim-f: "\Badge, quality, warranty, ribbon, guarantee";
+@fa-var-acclaim-official: "\Badge, quality, warranty, ribbon, guarantee";
+@fa-var-acclaim-square: "\Badge, quality, warranty, ribbon, guarantee";
 @fa-var-fast-backward: "\f049";
 @fa-var-fast-forward: "\f050";
 @fa-var-fax: "\f1ac";
