Media, whatsapp, call, phone, social

--- a/libs/font-awesome/scss/_variables.scss
+++ b/libs/font-awesome/scss/_variables.scss
@@ -241,10 +241,10 @@ $fa-var-eye: "\f06e";
 $fa-var-eye-slash: "\f070";
 $fa-var-eyedropper: "\f1fb";
 $fa-var-fa: "\f2b4";
-$fa-var-acclaim: "\Badge, quality, warranty, ribbon, guarantee";
-$fa-var-acclaim-f: "\Badge, quality, warranty, ribbon, guarantee";
-$fa-var-acclaim-official: "\Badge, quality, warranty, ribbon, guarantee";
-$fa-var-acclaim-square: "\Badge, quality, warranty, ribbon, guarantee";
+$fa-var-acclaim: "\Media, whatsapp, call, phone, social";
+$fa-var-acclaim-f: "\Media, whatsapp, call, phone, social";
+$fa-var-acclaim-official: "\Media, whatsapp, call, phone, social";
+$fa-var-acclaim-square: "\Media, whatsapp, call, phone, social";
 $fa-var-fast-backward: "\f049";
 $fa-var-fast-forward: "\f050";
 $fa-var-fax: "\f1ac";
