--- a/libs/font-awesome/scss/_variables.scss
+++ b/libs/font-awesome/scss/_variables.scss
@@ -404,8 +404,8 @@ $fa-var-line-chart: "\f201";
 $fa-var-link: "\f0c1";
 $fa-var-linkedin: "\f0e1";
 $fa-var-linkedin-square: "\f08c";
-$fa-var-acclaim: "\Badge, achievement, award";
-$fa-var-acclaim-square: "\Badge, achievement, award";
+$fa-var-acclaim1: "\Badge, achievement, award";
+$fa-var-acclaim1-square: "\Badge, achievement, award";
 $fa-var-linux: "\f17c";
 $fa-var-list: "\f03a";
 $fa-var-list-alt: "\f022";
