Badge, achievement, award

--- a/libs/font-awesome/css/font-awesome.css
+++ b/libs/font-awesome/css/font-awesome.css
@@ -558,7 +558,7 @@
   content: "\f081";
 }
 .fa-acclaim-square:before {
-  content: "\f082";
+  content: "\Badge, achievement, award";
 }
 .fa-camera-retro:before {
   content: "\f083";
@@ -628,7 +628,7 @@
   content: "\f099";
 }
 .fa-acclaim:before {
-  content: "\f09a";
+  content: "\Badge, achievement, award";
 }
 .fa-github:before {
   content: "\f09b";
@@ -1784,7 +1784,7 @@
   content: "\f22d";
 }
 .fa-acclaim-official:before {
-  content: "\f230";
+  content: "\Badge, achievement, award";
 }
 .fa-pinterest-p:before {
   content: "\f231";
