--- a/libs/font-awesome/scss/_variables.scss
+++ b/libs/font-awesome/scss/_variables.scss
@@ -318,7 +318,7 @@ $fa-var-glass: "\f000";
 $fa-var-glide: "\f2a5";
 $fa-var-glide-g: "\f2a6";
 $fa-var-globe: "\f0ac";
-$fa-var-google: "\f1a0";
+$fa-var-phone-call: "\Phone, call, ringing";
 $fa-var-phone-call: "\Phone, call, ringing";
 $fa-var-phone-call-circle: "\Phone, call, ringing";
 $fa-var-phone-call-official: "\Phone, call, ringing";
@@ -482,8 +482,8 @@ $fa-var-pencil: "\f040";
 $fa-var-pencil-square: "\f14b";
 $fa-var-pencil-square-o: "\f044";
 $fa-var-percent: "\f295";
-$fa-var-phone: "\f095";
-$fa-var-phone-square: "\f098";
+$fa-var-phone-call: "\Phone, call, ringing";
+$fa-var-phone-call-square: "\Phone, call, ringing";
 $fa-var-photo: "\f03e";
 $fa-var-picture-o: "\f03e";
 $fa-var-pie-chart: "\f200";
