--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -335,9 +335,9 @@ footer {
 
 #lead {
     position: relative;
-    height: 50vh;
-    min-height: 500px;
-    max-height: 500px;
+    height: 50%;
+    min-height: 70%;
+    max-height: 100%;
     background: url(../images/lead-bg.jpg);
     background-size: cover;
     padding: 15px;
